mod estat include modname and formula

--- a/disentangle-overview.org
+++ b/disentangle-overview.org
@@ -271,7 +271,7 @@ sink()
 #+end_src
 *** R-estat
 #+name:estat
-#+begin_src R :session *shell* :tangle R/estat.r :exports none :eval no
+#+begin_src R :session *R* :tangle R/estat.r :exports none :eval no
   # TODO
   # make values numeric where needed
   #                 AIC(modGLM)
@@ -280,13 +280,13 @@ sink()
   # name:estat
   # a function to get Akaike's and Schwarz's Bayesian information criteria.
     # named after stata function
-    estat <- function(modGLM, modName, read_previous_aictable = FALSE){
+    estat <- function(modGLM, modName, form = NA, order_by_aic = TRUE, read_previous_aictable = FALSE){
            if(read_previous_aictable & file.exists("aictable.csv"))
              {
                aictable <- read.csv('aictable.csv')
              }
   
-        estats <- c(modName,
+        estats <- c(modName, form,
                     length(coef(modGLM)),
                     (-2 * logLik(modGLM)[1] + 2 * length(modGLM$coeff)),
                     (-2 * logLik(modGLM)[1] + log(nrow(modGLM$data)) * length(modGLM$coeff)),
@@ -294,8 +294,9 @@ sink()
                       modGLM$null.deviance)*100)
           )
           estats <- as.data.frame(t(estats))
-          names(estats) <- c('model','param','aic','bic','percentChDev')
+          names(estats) <- c('model','formula','param','aic','bic','percentChDev')
           estats$model       <-as.character(estats$model)
+          estats$formula       <-as.character(estats$formula)
           estats$param       <-as.numeric(as.character(estats$param       ))
           estats$aic         <-as.numeric(as.character(estats$aic         ))
           estats$bic         <-as.numeric(as.character(estats$bic         ))
@@ -306,7 +307,12 @@ sink()
           } else {
             aictable <- rbind(aictable,estats)
           }
-       aictable <- aictable[order(aictable$bic),]
+       if(order_by_aic)
+         {
+          aictable <- aictable[order(aictable$aic),]
+         } else {
+          aictable <- aictable[order(aictable$bic),]
+         }
        return(aictable)
     }
   
