--- a/disentangle-overview.org
+++ b/disentangle-overview.org
@@ -9,6 +9,46 @@
 * func
 ** newnode
 *** test-newnode
+Hi Kathryn,
+Most people seem to collect multiple datasets together in a single spot that can be split into 2 or more separate data packages.  
+I think your database the other day was an example, and probably we'll find one key challenge for users will be to disentangle their own filing systems just as you are with that example you got sent.
+
+In my experience the way people store research data is often one (or a couple, or all) of these three types:
+a) a database with heaps of tables and views
+b) a directory (and sub-directories) with heaps of files 
+c) a spreadsheet workbook with heaps of sheets (and links to other workbooks)
+
+This is a natural set up from an analysts perspective, where the results of multiple steps accumulate as 'stepping stones' toward the file they end up analysing.  
+
+My tool I am developing addresses the challenge of graphing the links between these sequential steps.  It can be used in two ways.  The first is more suited to what you might need to do retrospectively.
+Example one, the composite view:
+FileName  Inputs	Outputs	Description
+FileA	TableXYZ	Input1	Transformed variable
+FileB	TableABC	Input2	Collapsed dimensions
+analysisFile	Input1, Input2	analysisResults	Merged inputs and analysed
+
+Example two, tracking the steps while analysing data:
+Structure a script into sections and document each section before evaluating the code to execute the step.  
+For example:
+#### step one ####
+
+
+It is not aimed at visualising the linked structure of a tree or semi-lattice but can be used in such a way but changing the nodename and inputs concept to parent/child relationships.
+
+
+Cheers,
+Ivan Hanigan
+Data Management Officer.
+National Centre for Epidemiology and Population Health (NCEPH).
+Research School of Population Health.
+College of Medicine, Biology and Environment. 
+Australian National University Canberra, ACT, 0200.
+Ph: +61 2 6125 7767.
+Fax: +61 2 6125 0740.
+Mob: 0428 265 976.
+CRICOS provider #00120C.
+
+
 #+name:newnode
 #+begin_src R :session *R* :tangle tests/test-newnode.r :exports none :eval no
   ################################################################
@@ -19,7 +59,44 @@
   nodes <- newnode("qc", c("data1", "data2", "data3"), c("d1", "d2", "d3"))
   nodes <- newnode("modelling", "EDA")
   nodes <- newnode("model checking", "modelling", c("data checking", "reporting"))
-  
+  require(disentangle)
+# either edit a spreadsheet with filenames, inputs and outputs 
+filesList <- read.csv("exampleFilesList.csv", stringsAsFactors = F)
+# or 
+filesList <- read.csv(textConnection(
+'FILE,INPUTS,OUTPUTS,DESCRIPTION
+siteIDs,GPS,,latitude and longitude of sites
+weather,BoM,,weather data from BoM
+trapped,siteIDs,,counts of species caught in trap
+biomass,siteIDs,,
+corralations,"weather,trapped,biomass",report1,A study we published
+paper1,report1,"open access repository, data package",
+'), stringsAsFactors = F)
+# start the graph
+i <- 1
+nodes <- newnode(name = filesList[i,1],
+                 inputs = strsplit(filesList$INPUTS, ",")[[i]],
+                 outputs = strsplit(filesList$OUTPUTS, ",")[[i]],
+                 newgraph=T)
+
+for(i in 2:nrow(filesList))
+{
+  # i <- 2
+  if(length(strsplit(filesList$OUTPUTS, ",")[[i]]) == 0)
+  {
+    nodes <- newnode(name = filesList[i,1],
+                     inputs = strsplit(filesList$INPUTS, ",")[[i]]
+    )    
+  } else {
+    nodes <- newnode(name = filesList[i,1],
+                     inputs = strsplit(filesList$INPUTS, ",")[[i]],
+                     outputs = strsplit(filesList$OUTPUTS, ",")[[i]]
+    )
+  }
+}
+
+#dev.copy2pdf(file='fileTransformations.pdf')
+#dev.off();                 
 #+end_src
 *** R-newnode
 #+name:newnode
