revised newnode to take empty output

--- a/disentangle-overview.org
+++ b/disentangle-overview.org
@@ -8,63 +8,12 @@
 * Introduction
 * func
 ** newnode
-*** test-newnode
-#+name:newnode
-#+begin_src R :session *R* :tangle tests/test-newnode.r :exports none :eval no
-  ################################################################
-  # name:newnode
-  source("R/newnode.r")
-  nodes <- newnode("merge", c("d1", "d2", "d3"), c("EDA"),
-                   newgraph =T)
-  nodes <- newnode("qc", c("data1", "data2", "data3"), c("d1", "d2", "d3"))
-  nodes <- newnode("modelling", "EDA")
-  nodes <- newnode("model checking", "modelling", c("data checking", "reporting"))
-  #require(disentangle)
-  # either edit a spreadsheet with filenames, inputs and outputs 
-  filesList <- read.csv("exampleFilesList.csv", stringsAsFactors = F)
-  # or 
-  filesList <- read.csv(textConnection(
-  'FILE,INPUTS,OUTPUTS,DESCRIPTION
-  siteIDs,GPS,,latitude and longitude of sites
-  weather,BoM,,weather data from BoM
-  trapped,siteIDs,,counts of species caught in trap
-  biomass,siteIDs,,
-  corralations,"weather,trapped,biomass",report1,A study we published
-  paper1,report1,"open access repository, data package",
-  '), stringsAsFactors = F)
-  # start the graph
-  i <- 1
-  nodes <- newnode(name = filesList[i,1],
-                   inputs = strsplit(filesList$INPUTS, ",")[[i]],
-                   outputs = strsplit(filesList$OUTPUTS, ",")[[i]],
-                   newgraph=T)
-   
-  for(i in 2:nrow(filesList))
-  {
-    # i <- 2
-    if(length(strsplit(filesList$OUTPUTS, ",")[[i]]) == 0)
-    {
-      nodes <- newnode(name = filesList[i,1],
-                       inputs = strsplit(filesList$INPUTS, ",")[[i]]
-      )    
-    } else {
-      nodes <- newnode(name = filesList[i,1],
-                       inputs = strsplit(filesList$INPUTS, ",")[[i]],
-                       outputs = strsplit(filesList$OUTPUTS, ",")[[i]]
-      )
-    }
-  }
-   
-  #dev.copy2pdf(file='fileTransformations.pdf')
-  #dev.off();
-   
-#+end_src
 *** R-newnode
 #+name:newnode
 #+begin_src R :session *R* :tangle R/newnode.r :exports none :eval no
   ################################################################
   # name:newnode
-  newnode<-function(name, inputs=NA, outputs=NA, graph = 'nodes', newgraph=F, notes=F, code=NA, ttype=NA, plot = T){
+  newnode<-function(name, inputs=NA, outputs=character(0), graph = 'nodes', newgraph=F, notes=F, code=NA, ttype=NA, plot = T){
     # USAGE
     # nodes <- newnode(  # adds to a graph called nodes
     # name = 'aquire the raw data'  # the name of the node being added 
@@ -102,7 +51,7 @@
     }
     nodes <- addEdge(i, dsc, nodes, 1)
     #}
-    if(!is.na(o[1])){
+    if(length(o) > 0){
     if(sum(o %in% nodes@nodes) != length(o)) {
       onew <- o[!o %in% nodes@nodes]
       nodes <- addNode(node=onew,object=nodes)   
@@ -117,6 +66,79 @@
   }
   
 #+end_src
+*** test-newnode
+#+name:newnode
+#+begin_src R :session *R* :tangle tests/test-newnode.r :exports none :eval no
+  ################################################################
+  # name:newnode
+  source("R/newnode.r")
+  newnode(
+    name = "NAME"
+    ,
+    inputs="INPUT"
+    ,
+    outputs = "OUTPUT"
+    ,
+    graph = 'nodes'
+    ,
+    newgraph=T
+    ,
+    notes=F
+    ,
+    code=NA
+    ,
+    ttype=NA
+    ,
+    plot = T
+    )
+  nodes <- newnode("merge", c("d1", "d2", "d3"))
+  nodes <- newnode("merge", c("d1", "d2", "d3"), c("EDA"),
+                   newgraph =T)
+  nodes <- newnode("qc", c("data1", "data2", "data3"), c("d1", "d2", "d3"))
+  nodes <- newnode("modelling", "EDA")
+  nodes <- newnode("model checking", "modelling", c("data checking", "reporting"))
+  #require(disentangle)
+  # either edit a spreadsheet with filenames, inputs and outputs 
+  filesList <- read.csv("exampleFilesList.csv", stringsAsFactors = F)
+  # or 
+  filesList <- read.csv(textConnection(
+  'FILE,INPUTS,OUTPUTS,DESCRIPTION
+  siteIDs,GPS,,latitude and longitude of sites
+  weather,BoM,,weather data from BoM
+  trapped,siteIDs,,counts of species caught in trap
+  biomass,siteIDs,,
+  corralations,"weather,trapped,biomass",report1,A study we published
+  paper1,report1,"open access repository, data package",
+  '), stringsAsFactors = F)
+  # start the graph
+  i <- 1
+  nodes <- newnode(name = filesList[i,1],
+                   inputs = strsplit(filesList$INPUTS, ",")[[i]],
+                   outputs =
+                   strsplit(filesList$OUTPUTS, ",")[[i]]
+                   ,
+                   newgraph=T)
+   
+  for(i in 2:nrow(filesList))
+  {
+    # i <- 2
+    if(length(strsplit(filesList$OUTPUTS, ",")[[i]]) == 0)
+    {
+      nodes <- newnode(name = filesList[i,1],
+                       inputs = strsplit(filesList$INPUTS, ",")[[i]]
+      )    
+    } else {
+      nodes <- newnode(name = filesList[i,1],
+                       inputs = strsplit(filesList$INPUTS, ",")[[i]],
+                       outputs = strsplit(filesList$OUTPUTS, ",")[[i]]
+      )
+    }
+  }
+   
+  #dev.copy2pdf(file='fileTransformations.pdf')
+  #dev.off();
+   
+#+end_src
 *** man-newnode
 #+name:newnode
 #+begin_src R :session *R* :tangle no :exports none :eval no
@@ -125,7 +147,7 @@
 
 #+end_src
 
-** COMMENT graphNodeFile
+** COMMENT graphNodeFile, deprecated, func won't return all nodes
 *** R-graphNodesFile
 #+name:graphNodesFile
 #+begin_src R :session *R* :tangle no :exports none :eval no
